Mise à jour du fichier RAPPORT.ipynb

--- a/6.Variables/300155504/RAPPORT.ipynb
+++ b/6.Variables/300155504/RAPPORT.ipynb
@@ -29,10 +29,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f0492b77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- f(10) ---\n",
+      "binaire      -> 0b1010\n",
+      "hexadécimal  -> 0xa\n",
+      "int          -> 10\n",
+      "float        -> 10.0\n",
+      "str          -> 10\n",
+      "\n",
+      "--- f(2.718) ---\n",
+      "float        -> 2.718\n",
+      "int          -> 2\n",
+      "str          -> 2.718\n",
+      "\n",
+      "--- f(hello) ---\n",
+      "str          -> hello\n",
+      "list         -> ['h', 'e', 'l', 'l', 'o']\n",
+      "tuple        -> ('h', 'e', 'l', 'l', 'o')\n",
+      "\n",
+      "--- f([7, 8, 9]) ---\n",
+      "list         -> [7, 8, 9]\n",
+      "tuple        -> (7, 8, 9)\n",
+      "array        -> array('i', [7, 8, 9])\n",
+      "str          -> [7, 8, 9]\n",
+      "\n",
+      "--- f((10, 20, 30)) ---\n",
+      "tuple        -> (10, 20, 30)\n",
+      "list         -> [10, 20, 30]\n",
+      "array        -> array('i', [10, 20, 30])\n",
+      "str          -> (10, 20, 30)\n",
+      "\n",
+      "--- f({'x': 1, 'y': 2}) ---\n",
+      "dict         -> {'x': 1, 'y': 2}\n",
+      "list_clés    -> ['x', 'y']\n",
+      "list_valeurs -> [1, 2]\n",
+      "str          -> {'x': 1, 'y': 2}\n"
+     ]
+    }
+   ],
    "source": [
     "from embellisseur import f\n",
     "\n",
@@ -49,7 +91,7 @@
     "    print(f\"\\n--- f({e}) ---\")\n",
     "    resultat = f(e)\n",
     "    for k, v in resultat.items():\n",
-    "        print(f\"{k:12} -> {v})"
+    "        print(f\"{k:12} -> {v}\")"
    ]
   },
   {
@@ -69,10 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "fc76cc4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La moyenne algébrique est : 6.1\n",
+      "La moyenne géométrique est : 5.3345372167932\n"
+     ]
+    }
+   ],
    "source": [
     "from moyenne import algebrique, geometrique\n",
     "\n",
@@ -103,10 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a3482e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ensemble des couples filtrés : {('C', 6), ('A', 4), ('B', 4), ('C', 2), ('A', 6), ('B', 6), ('C', 4), ('B', 2), ('A', 2)}\n",
+      "Moyenne algébrique des x filtrés : 4.0\n"
+     ]
+    }
+   ],
    "source": [
     "K = ['A', 'B', 'C']\n",
     "X = [1, 2, 3, 4, 5, 6]\n",
@@ -139,6 +199,46 @@
     "- Les fonctions mathématiques (`algebrique`, `geometrique`) peuvent être réutilisées dans différents contextes.\n",
     "- Les ensembles (`set`) et les comprehensions permettent de filtrer et de combiner des données de manière concise et expressive."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "392c53fe-bba9-447a-9260-59ddb01fbe76",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2691e3fb-3720-455f-8ae2-860a4eaadd20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb07f67a-d0f8-4fb7-a73c-d527af8f8b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ff81757-7a17-41a6-9e74-56651e0a1a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9724ae68-7cac-4b84-8bc9-7d90b5b737ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
