--- a/6.Variables/300156615/RAPPORT.ipynb
+++ b/6.Variables/300156615/RAPPORT.ipynb
@@ -1,9 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "364f152c-ccf6-4da6-aa3b-a3519d2c1c45",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1711f77c-2f17-4724-9839-20d6fe26390a",
    "metadata": {},
+   "outputs": [],
    "source": [
     "{\n",
     " \"cells\": [\n",
@@ -14,13 +16,13 @@
     "   \"source\": [\n",
     "    \"Variables en Python — Rapport\\n\",\n",
     "    \"\\n\",\n",
-    "    \"Nom : Walid lahsaien  \\n\",\n",
-    "    \"ID Boréal : 300156615  \\n\",\n",
+    "    \"Nom : Walid lahsaien\\n\",\n",
+    "    \"ID Boréal : 300156615\\n\",\n",
     "    \"\\n\",\n",
     "    \"Ce notebook présente trois sections :\\n\",\n",
-    "    \"1. Le module `embellisseur` et la fonction `f`\\n\",\n",
-    "    \"2. Le module `moyenne` (moyenne algébrique et géométrique)\\n\",\n",
-    "    \"3. Les ensembles (`set`) et la compréhension\"\n",
+    "    \"1. Le module embellisseur et la fonction f\\n\",\n",
+    "    \"2. Le module moyenne (moyenne algébrique et géométrique)\\n\",\n",
+    "    \"3. Les ensembles (set) et la compréhension\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
@@ -28,9 +30,9 @@
     "   \"id\": \"2c642b2e\",\n",
     "   \"metadata\": {},\n",
     "   \"source\": [\n",
-    "    \"## 1️⃣ Module `embellisseur`\\n\",\n",
+    "    \"## 1️⃣ Module embellisseur\\n\",\n",
     "    \"\\n\",\n",
-    "    \"Cette section montre comment la fonction `f` traite différents types de variables.\\n\",\n",
+    "    \"Cette section montre comment la fonction f traite différents types de variables.\\n\",\n",
     "    \"Elle illustre le polymorphisme de Python : une même fonction peut gérer plusieurs types de données (entiers, flottants, chaînes, listes, tuples, dictionnaires, etc.).\"\n",
     "   ]\n",
     "  },\n",
@@ -56,7 +58,7 @@
     "    \"    print(f\\\"\\\\n--- f({e}) ---\\\")\\n\",\n",
     "    \"    resultat = f(e)\\n\",\n",
     "    \"    for k, v in resultat.items():\\n\",\n",
-    "    \"        print(f\\\"{k:12} -> {v})\"\n",
+    "    \"        print(f\\\"{k:12} -> {v}\\\")\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
@@ -66,12 +68,11 @@
     "   \"source\": [\n",
     "    \"## 2️⃣ Moyenne algébrique et géométrique\\n\",\n",
     "    \"\\n\",\n",
-    "    \"Le module `moyenne` contient deux fonctions :\\n\",\n",
+    "    \"Le module moyenne contient deux fonctions :\\n\",\n",
+    "    \"- `algebrique(L)`\\n\",\n",
+    "    \"- `geometrique(L)`\\n\",\n",
     "    \"\\n\",\n",
-    "    \"- `algebrique(L)` : calcule la moyenne arithmétique d'une liste de nombres.\\n\",\n",
-    "    \"- `geometrique(L)` : calcule la moyenne géométrique d'une liste de nombres strictement positifs.\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"On applique ces fonctions à une même liste de valeurs pour comparer les deux résultats.\"\n",
+    "    \"On applique ces fonctions à une liste de valeurs pour comparer les résultats.\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
@@ -96,16 +97,10 @@
     "   \"source\": [\n",
     "    \"## 3️⃣ Ensembles (set) et compréhension\\n\",\n",
     "    \"\\n\",\n",
-    "    \"On construit un ensemble `S` de couples `(k, x)` où :\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"- `k` provient de la liste `K = ['A', 'B', 'C']`\\n\",\n",
-    "    \"- `x` provient de la liste `X = [1, 2, 3, 4, 5, 6]`\\n\",\n",
-    "    \"- `x` satisfait une condition `P(x)` (ici : être pair).\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"Cela illustre :\\n\",\n",
-    "    \"- les comprehensions (`{... for ... if ...}`)\\n\",\n",
-    "    \"- l'utilisation des ensembles (`set`)\\n\",\n",
-    "    \"- la réutilisation de la fonction `algebrique` pour calculer une moyenne sur les valeurs filtrées.\"\n",
+    "    \"On construit un ensemble S de couples (k, x) où :\\n\",\n",
+    "    \"- k provient de K = ['A', 'B', 'C']\\n\",\n",
+    "    \"- x provient de X = [1, 2, 3, 4, 5, 6]\\n\",\n",
+    "    \"- x satisfait P(x) (être pair)\\n\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
@@ -125,10 +120,7 @@
     "    \"print(\\\"Ensemble des couples filtrés :\\\", S)\\n\",\n",
     "    \"\\n\",\n",
     "    \"x_values = [x for (_, x) in S]\\n\",\n",
-    "    \"if x_values:\\n\",\n",
-    "    \"    moyenne = algebrique(x_values)\\n\",\n",
-    "    \"else:\\n\",\n",
-    "    \"    moyenne = 0\\n\",\n",
+    "    \"moyenne = algebrique(x_values) if x_values else 0\\n\",\n",
     "    \"\\n\",\n",
     "    \"print(\\\"Moyenne algébrique des x filtrés :\\\", moyenne)\"\n",
     "   ]\n",
@@ -140,11 +132,9 @@
     "   \"source\": [\n",
     "    \"## Conclusion\\n\",\n",
     "    \"\\n\",\n",
-    "    \"Ce rapport montre que :\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"- Une même fonction (`f`) peut traiter plusieurs types de données grâce au typage dynamique de Python.\\n\",\n",
-    "    \"- Les fonctions mathématiques (`algebrique`, `geometrique`) peuvent être réutilisées dans différents contextes.\\n\",\n",
-    "    \"- Les ensembles (`set`) et les comprehensions permettent de filtrer et de combiner des données de manière concise et expressive.\"\n",
+    "    \"- Une fonction peut gérer plusieurs types de données en Python.\\n\",\n",
+    "    \"- Les deux moyennes illustrent la réutilisation de fonctions mathématiques.\\n\",\n",
+    "    \"- Les ensembles et les comprehensions permettent de filtrer et combiner des données efficacement.\"\n",
     "   ]\n",
     "  }\n",
     " ],\n",
