--- a/6.Variables/300156615/RAPPORT.ipynb
+++ b/6.Variables/300156615/RAPPORT.ipynb
@@ -5,42 +5,105 @@
    "id": "3e8e61c6-530b-46fd-80fc-93b8e5c607cc",
    "metadata": {},
    "source": [
+    "\n",
     "{\n",
     " \"cells\": [\n",
     "  {\n",
     "   \"cell_type\": \"markdown\",\n",
-    "   \"id\": \"af1a3a2c\",\n",
+    "   \"id\": \"2ffddb62\",\n",
     "   \"metadata\": {},\n",
     "   \"source\": [\n",
-    "    \"Variables en Python — Rapport\\n\",\n",
     "    \"\\n\",\n",
-    "    \"Nom : Walid lahsaien\\n\",\n",
-    "    \"ID Boréal : 300156615\\n\",\n",
+    "    \"# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"|     |                     |\\n\",\n",
+    "    \"| --- | ------------------- |\\n\",\n",
+    "    \"| **Nom** | *Lahlou Lachi* |\\n\",\n",
+    "    \"| **🆔**  | *300150410* |\\n\",\n",
     "    \"\\n\",\n",
     "    \"Ce notebook présente trois sections :\\n\",\n",
-    "    \"1. Le module embellisseur et la fonction f\\n\",\n",
-    "    \"2. Le module moyenne (moyenne algébrique et géométrique)\\n\",\n",
-    "    \"3. Les ensembles (set) et la compréhension\"\n",
+    "    \"1. Le module `embellisseur` et la fonction `f`\\n\",\n",
+    "    \"2. Le module `moyenne` (moyenne **algébrique** et **géométrique**)\\n\",\n",
+    "    \"3. Les **ensembles** (`set`) et les **comprehensions**\\n\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
     "   \"cell_type\": \"markdown\",\n",
-    "   \"id\": \"2c642b2e\",\n",
+    "   \"id\": \"b5a1553e\",\n",
     "   \"metadata\": {},\n",
     "   \"source\": [\n",
-    "    \"## 1️⃣ Module embellisseur\\n\",\n",
     "    \"\\n\",\n",
-    "    \"Cette section montre comment la fonction f traite différents types de variables.\\n\",\n",
-    "    \"Elle illustre le polymorphisme de Python : une même fonction peut gérer plusieurs types de données (entiers, flottants, chaînes, listes, tuples, dictionnaires, etc.).\"\n",
+    "    \"### 🔧 (Optionnel) Préparer les modules locaux\\n\",\n",
+    "    \"Cette cellule **crée** des versions simples de `embellisseur.py` et `moyenne.py` **uniquement si** les fichiers n'existent pas déjà dans le dossier courant.\\n\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"markdown\",\n",
+    "   \"id\": \"5092e276\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"\\n\",\n",
+    "    \"## 1️⃣ Import du module `embellisseur`\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"Cette section montre comment la fonction `f` traite différents **types** de variables.  \\n\",\n",
+    "    \"Elle illustre le **polymorphisme** : une même fonction peut gérer plusieurs types.\\n\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
     "   \"cell_type\": \"code\",\n",
-    "   \"execution_count\": null,\n",
-    "   \"id\": \"f0492b77\",\n",
+    "   \"execution_count\": 3,\n",
+    "   \"id\": \"07f2ae82\",\n",
     "   \"metadata\": {},\n",
-    "   \"outputs\": [],\n",
+    "   \"outputs\": [\n",
+    "    {\n",
+    "     \"name\": \"stdout\",\n",
+    "     \"output_type\": \"stream\",\n",
+    "     \"text\": [\n",
+    "      \"\\n\",\n",
+    "      \"--- f(10) ---\\n\",\n",
+    "      \"type               -> int\\n\",\n",
+    "      \"repr               -> 10\\n\",\n",
+    "      \"is_numeric         -> True\\n\",\n",
+    "      \"double             -> 20\\n\",\n",
+    "      \"\\n\",\n",
+    "      \"--- f(2.718) ---\\n\",\n",
+    "      \"type               -> float\\n\",\n",
+    "      \"repr               -> 2.718\\n\",\n",
+    "      \"is_numeric         -> True\\n\",\n",
+    "      \"double             -> 5.436\\n\",\n",
+    "      \"\\n\",\n",
+    "      \"--- f('hello') ---\\n\",\n",
+    "      \"type               -> str\\n\",\n",
+    "      \"repr               -> 'hello'\\n\",\n",
+    "      \"is_numeric         -> False\\n\",\n",
+    "      \"length             -> 5\\n\",\n",
+    "      \"upper              -> HELLO\\n\",\n",
+    "      \"\\n\",\n",
+    "      \"--- f([7, 8, 9]) ---\\n\",\n",
+    "      \"type               -> list\\n\",\n",
+    "      \"repr               -> [7, 8, 9]\\n\",\n",
+    "      \"is_numeric         -> False\\n\",\n",
+    "      \"length             -> 3\\n\",\n",
+    "      \"sum_if_numeric     -> 24\\n\",\n",
+    "      \"\\n\",\n",
+    "      \"--- f((10, 20, 30)) ---\\n\",\n",
+    "      \"type               -> tuple\\n\",\n",
+    "      \"repr               -> (10, 20, 30)\\n\",\n",
+    "      \"is_numeric         -> False\\n\",\n",
+    "      \"length             -> 3\\n\",\n",
+    "      \"sum_if_numeric     -> 60\\n\",\n",
+    "      \"\\n\",\n",
+    "      \"--- f({'x': 1, 'y': 2}) ---\\n\",\n",
+    "      \"type               -> dict\\n\",\n",
+    "      \"repr               -> {'x': 1, 'y': 2}\\n\",\n",
+    "      \"is_numeric         -> False\\n\",\n",
+    "      \"keys               -> ['x', 'y']\\n\",\n",
+    "      \"values             -> [1, 2]\\n\"\n",
+    "     ]\n",
+    "    }\n",
+    "   ],\n",
     "   \"source\": [\n",
+    "    \"\\n\",\n",
     "    \"from embellisseur import f\\n\",\n",
     "    \"\\n\",\n",
     "    \"exemples = [\\n\",\n",
@@ -53,61 +116,91 @@
     "    \"]\\n\",\n",
     "    \"\\n\",\n",
     "    \"for e in exemples:\\n\",\n",
-    "    \"    print(f\\\"\\\\n--- f({e}) ---\\\")\\n\",\n",
+    "    \"    print(f\\\"\\\\n--- f({e!r}) ---\\\")\\n\",\n",
     "    \"    resultat = f(e)\\n\",\n",
     "    \"    for k, v in resultat.items():\\n\",\n",
-    "    \"        print(f\\\"{k:12} -> {v}\\\")\"\n",
+    "    \"        print(f\\\"{k:18} -> {v}\\\")\\n\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
     "   \"cell_type\": \"markdown\",\n",
-    "   \"id\": \"505065d1\",\n",
+    "   \"id\": \"6e344ef8\",\n",
     "   \"metadata\": {},\n",
     "   \"source\": [\n",
+    "    \"\\n\",\n",
     "    \"## 2️⃣ Moyenne algébrique et géométrique\\n\",\n",
     "    \"\\n\",\n",
-    "    \"Le module moyenne contient deux fonctions :\\n\",\n",
-    "    \"- `algebrique(L)`\\n\",\n",
-    "    \"- `geometrique(L)`\\n\",\n",
+    "    \"Le module `moyenne` contient deux fonctions :\\n\",\n",
     "    \"\\n\",\n",
-    "    \"On applique ces fonctions à une liste de valeurs pour comparer les résultats.\"\n",
+    "    \"- `algebrique(L)` : calcule la moyenne arithmétique  \\n\",\n",
+    "    \"  $$\\\\bar{x}=\\\\frac{\\\\sum_{i=1}^{n} x_i}{n}$$\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"- `geometrique(L)` : calcule la moyenne géométrique (pour $x_i>0$)  \\n\",\n",
+    "    \"  $$G=\\\\sqrt[n]{\\\\prod_{i=1}^{n} x_i}$$\\n\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
     "   \"cell_type\": \"code\",\n",
-    "   \"execution_count\": null,\n",
-    "   \"id\": \"fc76cc4e\",\n",
+    "   \"execution_count\": 8,\n",
+    "   \"id\": \"0cd13efd\",\n",
     "   \"metadata\": {},\n",
-    "   \"outputs\": [],\n",
+    "   \"outputs\": [\n",
+    "    {\n",
+    "     \"name\": \"stdout\",\n",
+    "     \"output_type\": \"stream\",\n",
+    "     \"text\": [\n",
+    "      \"Données : [2, 4.5, 6, 8, 10]\\n\",\n",
+    "      \"Moyenne algébrique : 6.1\\n\",\n",
+    "      \"Moyenne géométrique : 5.3345372167932\\n\"\n",
+    "     ]\n",
+    "    }\n",
+    "   ],\n",
     "   \"source\": [\n",
+    "    \"\\n\",\n",
     "    \"from moyenne import algebrique, geometrique\\n\",\n",
     "    \"\\n\",\n",
-    "    \"L = [2, 4.5, 6, 8, 10]\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"print(\\\"La moyenne algébrique est :\\\", algebrique(L))\\n\",\n",
-    "    \"print(\\\"La moyenne géométrique est :\\\", geometrique(L))\"\n",
+    "    \"donnees = [2, 4.5, 6, 8, 10]\\n\",\n",
+    "    \"print(\\\"Données :\\\", donnees)\\n\",\n",
+    "    \"print(\\\"Moyenne algébrique :\\\", algebrique(donnees))\\n\",\n",
+    "    \"print(\\\"Moyenne géométrique :\\\", geometrique(donnees))\\n\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
     "   \"cell_type\": \"markdown\",\n",
-    "   \"id\": \"28595985\",\n",
+    "   \"id\": \"ae00e9b5\",\n",
     "   \"metadata\": {},\n",
     "   \"source\": [\n",
+    "    \"\\n\",\n",
     "    \"## 3️⃣ Ensembles (set) et compréhension\\n\",\n",
     "    \"\\n\",\n",
-    "    \"On construit un ensemble S de couples (k, x) où :\\n\",\n",
-    "    \"- k provient de K = ['A', 'B', 'C']\\n\",\n",
-    "    \"- x provient de X = [1, 2, 3, 4, 5, 6]\\n\",\n",
-    "    \"- x satisfait P(x) (être pair)\\n\"\n",
+    "    \"On construit un ensemble `S` de couples `(k, x)` où :\\n\",\n",
+    "    \"- `k` provient de la liste `K = ['A', 'B', 'C']`\\n\",\n",
+    "    \"- `x` provient de la liste `X = [1, 2, 3, 4, 5, 6]`\\n\",\n",
+    "    \"- et `x` satisfait une condition `P(x)` (*ici, être pair*).\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"Cela illustre :\\n\",\n",
+    "    \"- les **comprehensions** (`{... for ... if ...}`),\\n\",\n",
+    "    \"- l'utilisation des **ensembles (`set`)**,\\n\",\n",
+    "    \"- la **réutilisation** de `algebrique`.\\n\"\n",
     "   ]\n",
     "  },\n",
     "  {\n",
     "   \"cell_type\": \"code\",\n",
-    "   \"execution_count\": null,\n",
-    "   \"id\": \"a3482e49\",\n",
+    "   \"execution_count\": 9,\n",
+    "   \"id\": \"e540eefa\",\n",
     "   \"metadata\": {},\n",
-    "   \"outputs\": [],\n",
+    "   \"outputs\": [\n",
+    "    {\n",
+    "     \"name\": \"stdout\",\n",
+    "     \"output_type\": \"stream\",\n",
+    "     \"text\": [\n",
+    "      \"Ensemble des couples filtrés : {('B', 2), ('A', 6), ('C', 4), ('B', 4), ('A', 2), ('C', 6), ('C', 2), ('B', 6), ('A', 4)}\\n\",\n",
+    "      \"Moyenne algébrique des x filtrés : 4.0\\n\"\n",
+    "     ]\n",
+    "    }\n",
+    "   ],\n",
     "   \"source\": [\n",
+    "    \"\\n\",\n",
     "    \"K = ['A', 'B', 'C']\\n\",\n",
     "    \"X = [1, 2, 3, 4, 5, 6]\\n\",\n",
     "    \"\\n\",\n",
@@ -118,28 +211,33 @@
     "    \"print(\\\"Ensemble des couples filtrés :\\\", S)\\n\",\n",
     "    \"\\n\",\n",
     "    \"x_values = [x for (_, x) in S]\\n\",\n",
-    "    \"moyenne = algebrique(x_values) if x_values else 0\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"print(\\\"Moyenne algébrique des x filtrés :\\\", moyenne)\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"id\": \"90083e93\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"## Conclusion\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"- Une fonction peut gérer plusieurs types de données en Python.\\n\",\n",
-    "    \"- Les deux moyennes illustrent la réutilisation de fonctions mathématiques.\\n\",\n",
-    "    \"- Les ensembles et les comprehensions permettent de filtrer et combiner des données efficacement.\"\n",
+    "    \"moyenne_pairs = algebrique(x_values) if x_values else 0\\n\",\n",
+    "    \"print(\\\"Moyenne algébrique des x filtrés :\\\", moyenne_pairs)\\n\"\n",
     "   ]\n",
     "  }\n",
     " ],\n",
-    " \"metadata\": {},\n",
+    " \"metadata\": {\n",
+    "  \"kernelspec\": {\n",
+    "   \"display_name\": \"Python 3 (ipykernel)\",\n",
+    "   \"language\": \"python\",\n",
+    "   \"name\": \"python3\"\n",
+    "  },\n",
+    "  \"language_info\": {\n",
+    "   \"codemirror_mode\": {\n",
+    "    \"name\": \"ipython\",\n",
+    "    \"version\": 3\n",
+    "   },\n",
+    "   \"file_extension\": \".py\",\n",
+    "   \"mimetype\": \"text/x-python\",\n",
+    "   \"name\": \"python\",\n",
+    "   \"nbconvert_exporter\": \"python\",\n",
+    "   \"pygments_lexer\": \"ipython3\",\n",
+    "   \"version\": \"3.12.12\"\n",
+    "  }\n",
+    " },\n",
     " \"nbformat\": 4,\n",
     " \"nbformat_minor\": 5\n",
-    "}\n"
+    "}"
    ]
   }
  ],
