--- a/6.Variables/300156615/RAPPORT.ipynb
+++ b/6.Variables/300156615/RAPPORT.ipynb
@@ -18,8 +18,8 @@
     "    \"\\n\",\n",
     "    \"|     |                     |\\n\",\n",
     "    \"| --- | ------------------- |\\n\",\n",
-    "    \"| **Nom** | *Lahlou Lachi* |\\n\",\n",
-    "    \"| **🆔**  | *300150410* |\\n\",\n",
+    "    \"| **Nom** | *Walid Lahsaien* |\\n\",\n",
+    "    \"| **🆔**  | *300156615* |\\n\",\n",
     "    \"\\n\",\n",
     "    \"Ce notebook présente trois sections :\\n\",\n",
     "    \"1. Le module `embellisseur` et la fonction `f`\\n\",\n",
