--- a/6.Variables/300156615/RAPPORT.ipynb
+++ b/6.Variables/300156615/RAPPORT.ipynb
@@ -2,10 +2,9 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "3e8e61c6-530b-46fd-80fc-93b8e5c607cc",
+   "id": "4220c09f-848d-4899-a48d-cae9dea98656",
    "metadata": {},
    "source": [
-    "\n",
     "{\n",
     " \"cells\": [\n",
     "  {\n",
@@ -18,8 +17,8 @@
     "    \"\\n\",\n",
     "    \"|     |                     |\\n\",\n",
     "    \"| --- | ------------------- |\\n\",\n",
-    "    \"| **Nom** | *Walid Lahsaien* |\\n\",\n",
-    "    \"| **🆔**  | *300156615* |\\n\",\n",
+    "    \"| **Nom** | *Lahlou Lachi* |\\n\",\n",
+    "    \"| **🆔**  | *300150410* |\\n\",\n",
     "    \"\\n\",\n",
     "    \"Ce notebook présente trois sections :\\n\",\n",
     "    \"1. Le module `embellisseur` et la fonction `f`\\n\",\n",
