--- a/6.Variables/300156615/RAPPORT.ipynb
+++ b/6.Variables/300156615/RAPPORT.ipynb
@@ -7,238 +7,222 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{\n",
-    " \"cells\": [\n",
-    "  {\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"id\": \"2ffddb62\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"\\n\",\n",
-    "    \"# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"|     |                     |\\n\",\n",
-    "    \"| --- | ------------------- |\\n\",\n",
-    "    \"| **Nom** | *Lahlou Lachi* |\\n\",\n",
-    "    \"| **🆔**  | *300150410* |\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"Ce notebook présente trois sections :\\n\",\n",
-    "    \"1. Le module `embellisseur` et la fonction `f`\\n\",\n",
-    "    \"2. Le module `moyenne` (moyenne **algébrique** et **géométrique**)\\n\",\n",
-    "    \"3. Les **ensembles** (`set`) et les **comprehensions**\\n\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"id\": \"b5a1553e\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"\\n\",\n",
-    "    \"### 🔧 (Optionnel) Préparer les modules locaux\\n\",\n",
-    "    \"Cette cellule **crée** des versions simples de `embellisseur.py` et `moyenne.py` **uniquement si** les fichiers n'existent pas déjà dans le dossier courant.\\n\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"id\": \"5092e276\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"\\n\",\n",
-    "    \"## 1️⃣ Import du module `embellisseur`\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"Cette section montre comment la fonction `f` traite différents **types** de variables.  \\n\",\n",
-    "    \"Elle illustre le **polymorphisme** : une même fonction peut gérer plusieurs types.\\n\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"execution_count\": 3,\n",
-    "   \"id\": \"07f2ae82\",\n",
-    "   \"metadata\": {},\n",
-    "   \"outputs\": [\n",
-    "    {\n",
-    "     \"name\": \"stdout\",\n",
-    "     \"output_type\": \"stream\",\n",
-    "     \"text\": [\n",
-    "      \"\\n\",\n",
-    "      \"--- f(10) ---\\n\",\n",
-    "      \"type               -> int\\n\",\n",
-    "      \"repr               -> 10\\n\",\n",
-    "      \"is_numeric         -> True\\n\",\n",
-    "      \"double             -> 20\\n\",\n",
-    "      \"\\n\",\n",
-    "      \"--- f(2.718) ---\\n\",\n",
-    "      \"type               -> float\\n\",\n",
-    "      \"repr               -> 2.718\\n\",\n",
-    "      \"is_numeric         -> True\\n\",\n",
-    "      \"double             -> 5.436\\n\",\n",
-    "      \"\\n\",\n",
-    "      \"--- f('hello') ---\\n\",\n",
-    "      \"type               -> str\\n\",\n",
-    "      \"repr               -> 'hello'\\n\",\n",
-    "      \"is_numeric         -> False\\n\",\n",
-    "      \"length             -> 5\\n\",\n",
-    "      \"upper              -> HELLO\\n\",\n",
-    "      \"\\n\",\n",
-    "      \"--- f([7, 8, 9]) ---\\n\",\n",
-    "      \"type               -> list\\n\",\n",
-    "      \"repr               -> [7, 8, 9]\\n\",\n",
-    "      \"is_numeric         -> False\\n\",\n",
-    "      \"length             -> 3\\n\",\n",
-    "      \"sum_if_numeric     -> 24\\n\",\n",
-    "      \"\\n\",\n",
-    "      \"--- f((10, 20, 30)) ---\\n\",\n",
-    "      \"type               -> tuple\\n\",\n",
-    "      \"repr               -> (10, 20, 30)\\n\",\n",
-    "      \"is_numeric         -> False\\n\",\n",
-    "      \"length             -> 3\\n\",\n",
-    "      \"sum_if_numeric     -> 60\\n\",\n",
-    "      \"\\n\",\n",
-    "      \"--- f({'x': 1, 'y': 2}) ---\\n\",\n",
-    "      \"type               -> dict\\n\",\n",
-    "      \"repr               -> {'x': 1, 'y': 2}\\n\",\n",
-    "      \"is_numeric         -> False\\n\",\n",
-    "      \"keys               -> ['x', 'y']\\n\",\n",
-    "      \"values             -> [1, 2]\\n\"\n",
-    "     ]\n",
-    "    }\n",
-    "   ],\n",
-    "   \"source\": [\n",
-    "    \"\\n\",\n",
-    "    \"from embellisseur import f\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"exemples = [\\n\",\n",
-    "    \"    10,\\n\",\n",
-    "    \"    2.718,\\n\",\n",
-    "    \"    \\\"hello\\\",\\n\",\n",
-    "    \"    [7, 8, 9],\\n\",\n",
-    "    \"    (10, 20, 30),\\n\",\n",
-    "    \"    {\\\"x\\\": 1, \\\"y\\\": 2}\\n\",\n",
-    "    \"]\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"for e in exemples:\\n\",\n",
-    "    \"    print(f\\\"\\\\n--- f({e!r}) ---\\\")\\n\",\n",
-    "    \"    resultat = f(e)\\n\",\n",
-    "    \"    for k, v in resultat.items():\\n\",\n",
-    "    \"        print(f\\\"{k:18} -> {v}\\\")\\n\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"id\": \"6e344ef8\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"\\n\",\n",
-    "    \"## 2️⃣ Moyenne algébrique et géométrique\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"Le module `moyenne` contient deux fonctions :\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"- `algebrique(L)` : calcule la moyenne arithmétique  \\n\",\n",
-    "    \"  $$\\\\bar{x}=\\\\frac{\\\\sum_{i=1}^{n} x_i}{n}$$\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"- `geometrique(L)` : calcule la moyenne géométrique (pour $x_i>0$)  \\n\",\n",
-    "    \"  $$G=\\\\sqrt[n]{\\\\prod_{i=1}^{n} x_i}$$\\n\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"execution_count\": 8,\n",
-    "   \"id\": \"0cd13efd\",\n",
-    "   \"metadata\": {},\n",
-    "   \"outputs\": [\n",
-    "    {\n",
-    "     \"name\": \"stdout\",\n",
-    "     \"output_type\": \"stream\",\n",
-    "     \"text\": [\n",
-    "      \"Données : [2, 4.5, 6, 8, 10]\\n\",\n",
-    "      \"Moyenne algébrique : 6.1\\n\",\n",
-    "      \"Moyenne géométrique : 5.3345372167932\\n\"\n",
-    "     ]\n",
-    "    }\n",
-    "   ],\n",
-    "   \"source\": [\n",
-    "    \"\\n\",\n",
-    "    \"from moyenne import algebrique, geometrique\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"donnees = [2, 4.5, 6, 8, 10]\\n\",\n",
-    "    \"print(\\\"Données :\\\", donnees)\\n\",\n",
-    "    \"print(\\\"Moyenne algébrique :\\\", algebrique(donnees))\\n\",\n",
-    "    \"print(\\\"Moyenne géométrique :\\\", geometrique(donnees))\\n\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"id\": \"ae00e9b5\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"\\n\",\n",
-    "    \"## 3️⃣ Ensembles (set) et compréhension\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"On construit un ensemble `S` de couples `(k, x)` où :\\n\",\n",
-    "    \"- `k` provient de la liste `K = ['A', 'B', 'C']`\\n\",\n",
-    "    \"- `x` provient de la liste `X = [1, 2, 3, 4, 5, 6]`\\n\",\n",
-    "    \"- et `x` satisfait une condition `P(x)` (*ici, être pair*).\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"Cela illustre :\\n\",\n",
-    "    \"- les **comprehensions** (`{... for ... if ...}`),\\n\",\n",
-    "    \"- l'utilisation des **ensembles (`set`)**,\\n\",\n",
-    "    \"- la **réutilisation** de `algebrique`.\\n\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"execution_count\": 9,\n",
-    "   \"id\": \"e540eefa\",\n",
-    "   \"metadata\": {},\n",
-    "   \"outputs\": [\n",
-    "    {\n",
-    "     \"name\": \"stdout\",\n",
-    "     \"output_type\": \"stream\",\n",
-    "     \"text\": [\n",
-    "      \"Ensemble des couples filtrés : {('B', 2), ('A', 6), ('C', 4), ('B', 4), ('A', 2), ('C', 6), ('C', 2), ('B', 6), ('A', 4)}\\n\",\n",
-    "      \"Moyenne algébrique des x filtrés : 4.0\\n\"\n",
-    "     ]\n",
-    "    }\n",
-    "   ],\n",
-    "   \"source\": [\n",
-    "    \"\\n\",\n",
-    "    \"K = ['A', 'B', 'C']\\n\",\n",
-    "    \"X = [1, 2, 3, 4, 5, 6]\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"def P(x):\\n\",\n",
-    "    \"    return x % 2 == 0\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"S = {(k, x) for k in K for x in X if P(x)}\\n\",\n",
-    "    \"print(\\\"Ensemble des couples filtrés :\\\", S)\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"x_values = [x for (_, x) in S]\\n\",\n",
-    "    \"moyenne_pairs = algebrique(x_values) if x_values else 0\\n\",\n",
-    "    \"print(\\\"Moyenne algébrique des x filtrés :\\\", moyenne_pairs)\\n\"\n",
-    "   ]\n",
-    "  }\n",
-    " ],\n",
-    " \"metadata\": {\n",
-    "  \"kernelspec\": {\n",
-    "   \"display_name\": \"Python 3 (ipykernel)\",\n",
-    "   \"language\": \"python\",\n",
-    "   \"name\": \"python3\"\n",
-    "  },\n",
-    "  \"language_info\": {\n",
-    "   \"codemirror_mode\": {\n",
-    "    \"name\": \"ipython\",\n",
-    "    \"version\": 3\n",
-    "   },\n",
-    "   \"file_extension\": \".py\",\n",
-    "   \"mimetype\": \"text/x-python\",\n",
-    "   \"name\": \"python\",\n",
-    "   \"nbconvert_exporter\": \"python\",\n",
-    "   \"pygments_lexer\": \"ipython3\",\n",
-    "   \"version\": \"3.12.12\"\n",
-    "  }\n",
-    " },\n",
-    " \"nbformat\": 4,\n",
-    " \"nbformat_minor\": 5\n",
-    "}"
+    "# 🐍 RAPPORT : Les variables en Python\n",
+    "\n",
+    "**Walid Lahsaien:** *(à compléter)* \n",
+    "*300156615:** *(à compléter)* \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🎯 Qu’est-ce qu’une variable ?\n",
+    "\n",
+    "Une variable est un nom qui permet de stocker une valeur dans la mémoire de l’ordinateur. Elle sert à réutiliser ou modifier ces valeurs dans un programme.\n",
+    "\n",
+    "Exemples :\n",
+    "\n",
+    "```python\n",
+    "nom = \"Alice\"\n",
+    "age = 25\n",
+    "```\n",
+    "\n",
+    "* `nom` contient une chaîne de caractères.\n",
+    "* `age` contient un entier.\n",
+    "\n",
+    "Une variable est comme une boîte avec une étiquette.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧠 Règles pour nommer une variable\n",
+    "\n",
+    "* Doit commencer par une lettre ou un `_`\n",
+    "* Ne peut pas commencer par un chiffre\n",
+    "* Pas d’espaces\n",
+    "* Sensible à la casse (`age` ≠ `Age`)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🔢 Types de valeurs possibles\n",
+    "\n",
+    "Python déduit automatiquement le type :\n",
+    "\n",
+    "```python\n",
+    "x = 10       # int\n",
+    "y = 3.14     # float\n",
+    "nom = \"Boréal\"  # str\n",
+    "vrai = True  # bool\n",
+    "```\n",
+    "\n",
+    "Pour vérifier :\n",
+    "\n",
+    "```python\n",
+    "print(type(x))\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🔁 Modifier une variable\n",
+    "\n",
+    "```python\n",
+    "note = 80\n",
+    "note = note + 5\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📦 Affectation multiple\n",
+    "\n",
+    "```python\n",
+    "a, b, c = 1, 2, 3\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧹 Supprimer une variable\n",
+    "\n",
+    "```python\n",
+    "del a\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📦 Types de données\n",
+    "\n",
+    "### Types simples\n",
+    "\n",
+    "| Type  | Exemple   | Description |\n",
+    "| ----- | --------- | ----------- |\n",
+    "| int   | x = 10    | Entier      |\n",
+    "| float | x = 3.14  | Décimal     |\n",
+    "| str   | \"Bonjour\" | Texte       |\n",
+    "| bool  | True      | Booléen     |\n",
+    "\n",
+    "### Types de collections\n",
+    "\n",
+    "| Type  | Exemple        | Description     |\n",
+    "| ----- | -------------- | --------------- |\n",
+    "| list  | [1,2,3]        | Modifiable      |\n",
+    "| tuple | (1,2,3)        | Non modifiable  |\n",
+    "| set   | {1,2,3}        | Ensemble unique |\n",
+    "| dict  | {\"nom\": \"Bob\"} | Clés/valeurs    |\n",
+    "\n",
+    "### Types avancés\n",
+    "\n",
+    "Fonctions, classes, modules, generators, etc.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🔄 Mutabilité\n",
+    "\n",
+    "Certains objets peuvent être modifiés (muables), d’autres non (immuables).\n",
+    "\n",
+    "### Objets immuables ❌\n",
+    "\n",
+    "`int`, `float`, `str`, `tuple`\n",
+    "\n",
+    "### Objets muables ✅\n",
+    "\n",
+    "`list`, `dict`, `set`\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 🧱 STRUCTURE DU NOTEBOOK : RAPPORT.ipynb\n",
+    "\n",
+    "## 🟦 Titre principal (Markdown)\n",
+    "\n",
+    "```markdown\n",
+    "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
+    "\n",
+    "| Nom | (à compléter) |\n",
+    "| 🆔  | (à compléter) |\n",
+    "```\n",
+    "\n",
+    "Ce rapport contient :\n",
+    "\n",
+    "1. Le module `embellisseur`\n",
+    "2. Le module `moyenne`\n",
+    "3. Les ensembles (`set`) et compréhensions\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1️⃣ Module `embellisseur` — Polymorphisme\n",
+    "\n",
+    "### 🟩 Cellule Markdown\n",
+    "\n",
+    "Cette partie montre comment `f` traite plusieurs types de données.\n",
+    "\n",
+    "### 🟧 Cellule Code\n",
+    "\n",
+    "```python\n",
+    "from embellisseur import f\n",
+    "\n",
+    "exemples = [10, 2.718, \"hello\", [7,8,9], (10,20,30), {\"x\":1, \"y\":2}]\n",
+    "\n",
+    "for e in exemples:\n",
+    "    print(f\"\\n--- f({e}) ---\")\n",
+    "    resultat = f(e)\n",
+    "    for k, v in resultat.items():\n",
+    "        print(f\"{k:12} -> {v}\")\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2️⃣ Moyenne algébrique et géométrique\n",
+    "\n",
+    "### 🟩 Explication (Markdown)\n",
+    "\n",
+    "Deux fonctions :\n",
+    "\n",
+    "* **Moyenne arithmétique** :\n",
+    "  (\\bar{x} = \\frac{\\sum x_i}{n})\n",
+    "* **Moyenne géométrique** :\n",
+    "  (G = \\sqrt[n]{\\prod x_i})\n",
+    "\n",
+    "### 🟧 Cellule Code\n",
+    "\n",
+    "```python\n",
+    "from moyenne import algebrique, geometrique\n",
+    "\n",
+    "print(\"Moyenne algébrique :\", algebrique([2,4.5,6,8,10]))\n",
+    "print(\"Moyenne géométrique :\", geometrique([2,4.5,6,8,10]))\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3️⃣ Ensembles et compréhension\n",
+    "\n",
+    "### 🟩 Markdown\n",
+    "\n",
+    "Construction d’un ensemble filtré.\n",
+    "\n",
+    "### 🟧 Code\n",
+    "\n",
+    "```python\n",
+    "K = ['A', 'B', 'C']\n",
+    "X = [1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "def P(x):\n",
+    "    return x % 2 == 0\n",
+    "\n",
+    "S = {(k, x) for k in K for x in X if P(x)}\n",
+    "print(\"Ensemble filtré :\", S)\n",
+    "\n",
+    "x_values = [x for (_, x) in S]\n",
+    "\n",
+    "moyenne = algebrique(x_values) if x_values else 0\n",
+    "print(\"Moyenne algébrique des x filtrés :\", moyenne)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 🧠 Conclusion\n",
+    "\n",
+    "* Une fonction peut manipuler plusieurs types.\n",
+    "* Les moyennes arithmétiques et géométriques permettent des analyses simples.\n",
+    "* Les ensembles et compréhensions facilitent le filtrage et la génération de données.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "\n"
    ]
   }
  ],
