--- a/6.Variables/300156615/RAPPORT.ipynb
+++ b/6.Variables/300156615/RAPPORT.ipynb
@@ -5,56 +5,50 @@
    "id": "fbeb902f-9310-4272-9631-b4af6cdc713f",
    "metadata": {},
    "source": [
-    "# 🐍 RAPPORT : Les variables en Python\n",
+    "# 🍂 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
     "\n",
-    "**Walid Lahsaien:** *(à compléter)* \n",
-    "*300156615:** *(à compléter)* \n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td><strong>Nom</strong></td>\n",
+    "    <td>WALID LAHSAIEN</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><strong>🆔</strong></td>\n",
+    "    <td>300156615</td>\n",
+    "  </tr>\n",
+    "</table>\n",
     "\n",
     "---\n",
     "\n",
-    "## 🎯 Qu’est-ce qu’une variable ?\n",
-    "\n",
-    "Une variable est un nom qui permet de stocker une valeur dans la mémoire de l’ordinateur. Elle sert à réutiliser ou modifier ces valeurs dans un programme.\n",
-    "\n",
-    "Exemples :\n",
+    "## 🐍 Leçon : Les variables en Python  \n",
+    "### 🎯 Qu’est-ce qu’une variable ?\n",
+    "Une variable est un nom qui sert à stocker une valeur dans la mémoire de l’ordinateur.  \n",
+    "Elle agit comme une **boîte étiquetée** contenant une information.\n",
     "\n",
     "```python\n",
     "nom = \"Alice\"\n",
     "age = 25\n",
     "```\n",
     "\n",
-    "* `nom` contient une chaîne de caractères.\n",
-    "* `age` contient un entier.\n",
-    "\n",
-    "Une variable est comme une boîte avec une étiquette.\n",
-    "\n",
     "---\n",
     "\n",
     "## 🧠 Règles pour nommer une variable\n",
     "\n",
-    "* Doit commencer par une lettre ou un `_`\n",
-    "* Ne peut pas commencer par un chiffre\n",
-    "* Pas d’espaces\n",
-    "* Sensible à la casse (`age` ≠ `Age`)\n",
+    "✔ Commence par une lettre ou un `_`  \n",
+    "✔ Pas d’espace  \n",
+    "✔ Ne commence pas par un chiffre  \n",
+    "✔ Sensible à la casse (`age` ≠ `Age`)\n",
     "\n",
     "---\n",
     "\n",
-    "## 🔢 Types de valeurs possibles\n",
+    "## 🔢 Types de valeurs\n",
     "\n",
-    "Python déduit automatiquement le type :\n",
-    "\n",
-    "```python\n",
-    "x = 10       # int\n",
-    "y = 3.14     # float\n",
-    "nom = \"Boréal\"  # str\n",
-    "vrai = True  # bool\n",
-    "```\n",
-    "\n",
-    "Pour vérifier :\n",
-    "\n",
-    "```python\n",
-    "print(type(x))\n",
-    "```\n",
+    "| Exemple | Type |\n",
+    "|--------|------|\n",
+    "| `x = 10` | int |\n",
+    "| `x = 3.14` | float |\n",
+    "| `\"Boréal\"` | str |\n",
+    "| `True` | bool |\n",
     "\n",
     "---\n",
     "\n",
@@ -83,77 +77,22 @@
     "\n",
     "---\n",
     "\n",
-    "## 📦 Types de données\n",
+    "# 🧩 1️⃣ Module `embellisseur` — Fonction f\n",
     "\n",
-    "### Types simples\n",
-    "\n",
-    "| Type  | Exemple   | Description |\n",
-    "| ----- | --------- | ----------- |\n",
-    "| int   | x = 10    | Entier      |\n",
-    "| float | x = 3.14  | Décimal     |\n",
-    "| str   | \"Bonjour\" | Texte       |\n",
-    "| bool  | True      | Booléen     |\n",
-    "\n",
-    "### Types de collections\n",
-    "\n",
-    "| Type  | Exemple        | Description     |\n",
-    "| ----- | -------------- | --------------- |\n",
-    "| list  | [1,2,3]        | Modifiable      |\n",
-    "| tuple | (1,2,3)        | Non modifiable  |\n",
-    "| set   | {1,2,3}        | Ensemble unique |\n",
-    "| dict  | {\"nom\": \"Bob\"} | Clés/valeurs    |\n",
-    "\n",
-    "### Types avancés\n",
-    "\n",
-    "Fonctions, classes, modules, generators, etc.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 🔄 Mutabilité\n",
-    "\n",
-    "Certains objets peuvent être modifiés (muables), d’autres non (immuables).\n",
-    "\n",
-    "### Objets immuables ❌\n",
-    "\n",
-    "`int`, `float`, `str`, `tuple`\n",
-    "\n",
-    "### Objets muables ✅\n",
-    "\n",
-    "`list`, `dict`, `set`\n",
-    "\n",
-    "---\n",
-    "\n",
-    "# 🧱 STRUCTURE DU NOTEBOOK : RAPPORT.ipynb\n",
-    "\n",
-    "## 🟦 Titre principal (Markdown)\n",
-    "\n",
-    "```markdown\n",
-    "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
-    "\n",
-    "| Nom | (à compléter) |\n",
-    "| 🆔  | (à compléter) |\n",
-    "```\n",
-    "\n",
-    "Ce rapport contient :\n",
-    "\n",
-    "1. Le module `embellisseur`\n",
-    "2. Le module `moyenne`\n",
-    "3. Les ensembles (`set`) et compréhensions\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 1️⃣ Module `embellisseur` — Polymorphisme\n",
-    "\n",
-    "### 🟩 Cellule Markdown\n",
-    "\n",
-    "Cette partie montre comment `f` traite plusieurs types de données.\n",
-    "\n",
-    "### 🟧 Cellule Code\n",
+    "Cette section montre comment la fonction **f** réagit à plusieurs types : entier, float, chaîne, liste, tuple, dictionnaire.  \n",
+    "Cela illustre le **polymorphisme**.\n",
     "\n",
     "```python\n",
     "from embellisseur import f\n",
     "\n",
-    "exemples = [10, 2.718, \"hello\", [7,8,9], (10,20,30), {\"x\":1, \"y\":2}]\n",
+    "exemples = [\n",
+    "    10,\n",
+    "    2.718,\n",
+    "    \"hello\",\n",
+    "    [7, 8, 9],\n",
+    "    (10, 20, 30),\n",
+    "    {\"x\": 1, \"y\": 2}\n",
+    "]\n",
     "\n",
     "for e in exemples:\n",
     "    print(f\"\\n--- f({e}) ---\")\n",
@@ -164,35 +103,39 @@
     "\n",
     "---\n",
     "\n",
-    "## 2️⃣ Moyenne algébrique et géométrique\n",
+    "# 2️⃣ Moyenne algébrique & géométrique\n",
     "\n",
-    "### 🟩 Explication (Markdown)\n",
+    "### ▪ Moyenne algébrique  \n",
+    "\\[\n",
+    "\\bar{x} = \\frac{\\sum x_i}{n}\n",
+    "\\]\n",
     "\n",
-    "Deux fonctions :\n",
-    "\n",
-    "* **Moyenne arithmétique** :\n",
-    "  (\\bar{x} = \\frac{\\sum x_i}{n})\n",
-    "* **Moyenne géométrique** :\n",
-    "  (G = \\sqrt[n]{\\prod x_i})\n",
-    "\n",
-    "### 🟧 Cellule Code\n",
+    "### ▪ Moyenne géométrique  \n",
+    "\\[\n",
+    "G = \\sqrt[n]{\\prod x_i}\n",
+    "\\]\n",
     "\n",
     "```python\n",
     "from moyenne import algebrique, geometrique\n",
     "\n",
-    "print(\"Moyenne algébrique :\", algebrique([2,4.5,6,8,10]))\n",
-    "print(\"Moyenne géométrique :\", geometrique([2,4.5,6,8,10]))\n",
+    "print(\"La moyenne algébrique est :\", algebrique([2, 4.5, 6, 8, 10]))\n",
+    "print(\"La moyenne géométrique est :\", geometrique([2, 4.5, 6, 8, 10]))\n",
     "```\n",
     "\n",
     "---\n",
     "\n",
-    "## 3️⃣ Ensembles et compréhension\n",
+    "# 3️⃣ Ensembles (set) et compréhension\n",
     "\n",
-    "### 🟩 Markdown\n",
+    "On construit un ensemble :\n",
     "\n",
-    "Construction d’un ensemble filtré.\n",
+    "\\[\n",
+    "\\{(k,x)\\ |\\ k\\in K \\land x\\in X \\land P(x)\\}\n",
+    "\\]\n",
     "\n",
-    "### 🟧 Code\n",
+    "Avec :  \n",
+    "- `K = ['A', 'B', 'C']`  \n",
+    "- `X = [1, 2, 3, 4, 5, 6]`  \n",
+    "- `P(x)` = nombre pair\n",
     "\n",
     "```python\n",
     "K = ['A', 'B', 'C']\n",
@@ -202,11 +145,14 @@
     "    return x % 2 == 0\n",
     "\n",
     "S = {(k, x) for k in K for x in X if P(x)}\n",
-    "print(\"Ensemble filtré :\", S)\n",
+    "print(\"Ensemble des couples filtrés :\", S)\n",
     "\n",
     "x_values = [x for (_, x) in S]\n",
+    "if x_values:\n",
+    "    moyenne = algebrique(x_values)\n",
+    "else:\n",
+    "    moyenne = 0\n",
     "\n",
-    "moyenne = algebrique(x_values) if x_values else 0\n",
     "print(\"Moyenne algébrique des x filtrés :\", moyenne)\n",
     "```\n",
     "\n",
@@ -214,12 +160,13 @@
     "\n",
     "# 🧠 Conclusion\n",
     "\n",
-    "* Une fonction peut manipuler plusieurs types.\n",
-    "* Les moyennes arithmétiques et géométriques permettent des analyses simples.\n",
-    "* Les ensembles et compréhensions facilitent le filtrage et la génération de données.\n",
+    "Ce rapport montre que :\n",
+    "\n",
+    "- Une même fonction peut traiter plusieurs types grâce au **typage dynamique** de Python.\n",
+    "- Les fonctions `algebrique` et `geometrique` sont réutilisables dans plusieurs contextes.\n",
+    "- Les ensembles et compréhensions permettent de filtrer et combiner des données de façon simple et efficace.\n",
     "\n",
     "---\n",
-    "\n",
     "\n"
    ]
   }
