--- a/6.Variables/300157416/RAPPORT.ipynb
+++ b/6.Variables/300157416/RAPPORT.ipynb
@@ -32,10 +32,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d54822cb-f0d2-4f69-9447-948b3e7312c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- f(10) ---\n",
+      "binaire      -> 0b1010\n",
+      "hexadécimal  -> 0xa\n",
+      "int          -> 10\n",
+      "float        -> 10.0\n",
+      "str          -> 10\n",
+      "\n",
+      "--- f(2.718) ---\n",
+      "float        -> 2.718\n",
+      "int          -> 2\n",
+      "str          -> 2.718\n",
+      "\n",
+      "--- f(hello) ---\n",
+      "str          -> hello\n",
+      "list         -> ['h', 'e', 'l', 'l', 'o']\n",
+      "tuple        -> ('h', 'e', 'l', 'l', 'o')\n",
+      "\n",
+      "--- f([7, 8, 9]) ---\n",
+      "list         -> [7, 8, 9]\n",
+      "tuple        -> (7, 8, 9)\n",
+      "array        -> array('i', [7, 8, 9])\n",
+      "str          -> [7, 8, 9]\n",
+      "\n",
+      "--- f((10, 20, 30)) ---\n",
+      "tuple        -> (10, 20, 30)\n",
+      "list         -> [10, 20, 30]\n",
+      "array        -> array('i', [10, 20, 30])\n",
+      "str          -> (10, 20, 30)\n",
+      "\n",
+      "--- f({'x': 1, 'y': 2}) ---\n",
+      "dict         -> {'x': 1, 'y': 2}\n",
+      "list_clés    -> ['x', 'y']\n",
+      "list_valeurs -> [1, 2]\n",
+      "str          -> {'x': 1, 'y': 2}\n"
+     ]
+    }
+   ],
    "source": [
     "from embellisseur import f\n",
     "\n",
@@ -76,10 +118,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "702cd480-de9d-4dad-8310-01938ccbdcd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La moyenne algébrique est : 6.1\n",
+      "La moyenne géométrique est : 5.3345372167932\n"
+     ]
+    }
+   ],
    "source": [
     "from moyenne import algebrique, geometrique\n",
     "\n",
@@ -109,10 +160,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d4c56633-a44a-4107-8091-a88ba10451d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ensemble des couples filtrés : {('C', 6), ('B', 4), ('A', 2), ('C', 2), ('A', 4), ('C', 4), ('B', 6), ('B', 2), ('A', 6)}\n",
+      "Moyenne algébrique des x filtrés : 4.0\n"
+     ]
+    }
+   ],
    "source": [
     "K = ['A', 'B', 'C']\n",
     "X = [1, 2, 3, 4, 5, 6]\n",
