--- a/6.Variables/300157440/RAPPORT.ipynb
+++ b/6.Variables/300157440/RAPPORT.ipynb
@@ -1,25 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "id": "854881ed-f01c-4160-8564-18629ac326cb",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 🪐 RAPPORT : Analyse de Code Python  \n",
     "## Variables, Moyennes & Ensembles\n",
     "\n",
-    "👤 **Nom :** *Houssam Eddine Rachdi*  \n",
-    "🆔 **ID :** *300157440*  \n",
-    "\n",
     "---\n",
     "\n",
-    "📘 **Contenu du notebook :**\n",
+    "## ✍️ Signature\n",
     "\n",
-    "1️⃣ Le module `embellisseur` et la fonction `f`  \n",
-    "2️⃣ Le module `moyenne` (moyenne **algébrique** et **géométrique**)  \n",
-    "3️⃣ Les **ensembles** (`set`) et les **comprehensions**\n"
+    "| Nom complet | Identifiant | Signature |\n",
+    "|------------|-------------|-----------|\n",
+    "| **Houssam Eddine Rachdi** | **300157440** | Houssam eddine Rachdi |\n"
    ]
   },
   {
@@ -142,11 +137,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "f632f1be-4c6b-42cb-9c8f-c08fd0f392ae",
    "metadata": {},
-   "outputs": [],
    "source": [
     "---\n",
     "\n",
@@ -156,6 +149,14 @@
     "|------------|-------------|-----------|\n",
     "| **Houssam Eddine Rachdi** | **300157440** | Houssam Eddine Rachdi |\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a208d32e-7954-450d-9132-7a2a1d7f5614",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
