--- a/8.OOP/300151483/RAPPORT.ipynb
+++ b/8.OOP/300151483/RAPPORT.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "48d4a6b9-73f4-4233-ad05-0c6019f6df43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '🆔' (U+1F194) (2294731145.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m| 🆔  | 300151483           |\u001b[39m\n      ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '🆔' (U+1F194)\n"
+     ]
+    }
+   ],
    "source": [
     "# 🧮 Étude : Figures Géométriques — Aires et Visualisations\n",
     "\n",
     "|     |                     |\n",
     "| --- | ------------------- |\n",
-    "| Nom | Personne Importante |\n",
+    "| Nom | ARNAULD TCHUMNO |\n",
     "| 🆔  | 300151483           |\n",
     "\n",
     "Ce notebook démontre l’utilisation d’une hiérarchie de classes Python :\n",
@@ -27,11 +36,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4525fb11-aa95-49a3-87c5-422985c917ef",
+   "cell_type": "markdown",
+   "id": "ac3b44c1-4262-4c16-92ac-1f7bfe18a85f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from carre import Carre\n",
     "from cercle import Cercle\n",
@@ -48,7 +55,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
