ajout de fichier

--- a/8.OOP/300151483/RAPPORT.ipynb
+++ b/8.OOP/300151483/RAPPORT.ipynb
@@ -1,27 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "48d4a6b9-73f4-4233-ad05-0c6019f6df43",
+   "cell_type": "markdown",
+   "id": "47082051-186e-4e18-bf44-f31f4c2e48bd",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid character '🆔' (U+1F194) (2294731145.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m| 🆔  | 300151483           |\u001b[39m\n      ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '🆔' (U+1F194)\n"
-     ]
-    }
-   ],
    "source": [
+    "\n",
     "# 🧮 Étude : Figures Géométriques — Aires et Visualisations\n",
     "\n",
-    "|     |                     |\n",
-    "| --- | ------------------- |\n",
-    "| Nom | ARNAULD TCHUMNO |\n",
-    "| 🆔  | 300151483           |\n",
+    "| Nom | Arnold |\n",
+    "| --- | ------- |\n",
+    "| 🆔  | 300151483 |\n",
+    "\n",
     "\n",
     "Ce notebook démontre l’utilisation d’une hiérarchie de classes Python :\n",
     "\n",
@@ -34,6 +24,14 @@
     "- **matplotlib 3.9.2**\n",
     "- **numpy 2.1.3**\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ff2c1dd-47d3-4b55-8367-1ec14c2f2e9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
