Mes corrections locales

--- a/8.OOP/300151483/RAPPORT.ipynb
+++ b/8.OOP/300151483/RAPPORT.ipynb
@@ -27,11 +27,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1ff2c1dd-47d3-4b55-8367-1ec14c2f2e9c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'triangle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcarre\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Carre\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcercle\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Cercle\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtriangle\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Triangle\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtrapeze\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Trapeze\n\u001b[32m      6\u001b[39m c1 = Carre(\u001b[32m4\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'triangle'"
+     ]
+    }
+   ],
+   "source": [
+    "from carre import Carre\n",
+    "from cercle import Cercle\n",
+    "from triangle import Triangle\n",
+    "from trapeze import Trapeze\n",
+    "\n",
+    "c1 = Carre(4)\n",
+    "c2 = Cercle(3)\n",
+    "t1 = Triangle(5, 2)\n",
+    "tr1 = Trapeze(6, 4, 3)\n",
+    "\n",
+    "for f in [c1, c2, t1, tr1]:\n",
+    "    print(f.afficher_info())\n",
+    "    f.dessiner()\n"
+   ]
   },
   {
    "cell_type": "markdown",
