--- a/6.Variables/300155086/RAPPORT.ipynb
+++ b/6.Variables/300155086/RAPPORT.ipynb
@@ -5,22 +5,34 @@
    "id": "44565450-aaed-4e78-ac4a-be050d2f490e",
    "metadata": {},
    "source": [
-    "# INF1042 — Rapport sur les Variables\n",
+    "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
     "\n",
-    "| Nom         | Tarek Akli        |\n",
-    "|-------------|--------------------|\n",
-    "| Identifiant | 300155086          |\n",
-    "| Dossier     | 6.Variables/300155086 |\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | Tarek Akli |\n",
+    "| 🆔  | 300155086           |\n",
     "\n",
-    "---\n",
     "\n",
-    "## Objectif\n",
-    "Ce rapport explore les notions de polymorphisme, de moyennes (algébrique et géométrique), et de compréhension d’ensembles en Python.\n"
+    "Ce notebook présente trois sections :\n",
+    "1. Le module `embellisseur` et la fonction `f`\n",
+    "2. Le module `moyenne` (moyenne algébrique et géométrique)\n",
+    "3. Les ensembles (`set`) et la compréhension\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeb92d43-0c45-4ee2-a6f6-c64dd56db13f",
+   "metadata": {},
+   "source": [
+    "#### 1️⃣ Import du module `embellisseur`\n",
+    "\n",
+    "Cette section montre comment la fonction `f` traite différents types de variables.\n",
+    "Elle illustre le **polymorphisme** de Python (une même fonction peut gérer plusieurs types)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4e7a53db-9e75-4cdc-a12d-d8994873f8dc",
    "metadata": {},
    "outputs": [
@@ -78,37 +90,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "id": "e0454216-cdd3-43f7-8df7-f5987e600903",
+   "metadata": {},
+   "source": [
+    "## 2️⃣ Moyenne algébrique et géométrique\n",
+    "\n",
+    "Le module `moyenne` contient deux fonctions :\n",
+    "\n",
+    "- `algebrique(L)` : calcule la moyenne arithmétique  \n",
+    "  $\n",
+    "  \\bar{x} = \\frac{\\sum x_i}{n}\n",
+    "  $\n",
+    "- `geometrique(L)` : calcule la moyenne géométrique  \n",
+    "  $\n",
+    "  G = \\sqrt[n]{\\prod x_i}\n",
+    "  $\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b5cb3f4c-ad7c-44e2-9657-d490d7c03f5d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moyenne algébrique : 6.1\n",
-      "Moyenne géométrique : 5.3345372167932\n"
+      "La moyenne algébrique est : 6.1\n",
+      "La moyenne géométrique est : 5.3345372167932\n"
      ]
     }
    ],
    "source": [
     "from moyenne import algebrique, geometrique\n",
     "\n",
-    "L = [2, 4.5, 6, 8, 10]\n",
-    "print(\"Moyenne algébrique :\", algebrique(L))\n",
-    "print(\"Moyenne géométrique :\", geometrique(L))\n"
+    "print(\"La moyenne algébrique est :\", algebrique([2, 4.5, 6, 8, 10]))\n",
+    "print(\"La moyenne géométrique est :\", geometrique([2, 4.5, 6, 8, 10]))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c9748719-c85d-496a-96cd-9a1ebde614b3",
+   "id": "8fe6b61b-08bc-4a87-bf33-565e91bc0232",
    "metadata": {},
    "source": [
-    "### Ensembles filtrés et compréhension\n",
+    "## 3️⃣ Ensembles (set) et compréhension\n",
     "\n",
-    "On utilise une compréhension d’ensemble pour créer des couples `(k, x)` où `x` est un entier pair.  \n",
-    "Ensuite, on extrait les valeurs `x` pour calculer leur moyenne algébrique.\n"
+    "${\\displaystyle \\{(k,x)\\ \\|\\ k\\in K\\wedge x\\in X\\wedge P(x)\\}}$\n",
+    "\n",
+    "On construit un ensemble `S` de couples `(k, x)` où :\n",
+    "- `k` provient de la liste `K = ['A', 'B', 'C']`\n",
+    "- `x` provient de la liste `X = [1, 2, 3, 4, 5, 6]`\n",
+    "- et `x` satisfait une condition `P(x)` (ici, être pair).\n",
+    "\n",
+    "Cela illustre :\n",
+    "- les **comprehensions** (`{... for ... if ...}`)\n",
+    "- l'utilisation des **ensembles (`set`)**\n",
+    "- la **réutilisation de fonction** (`algebrique`)"
    ]
   },
   {
@@ -143,18 +182,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1502b6e-30fc-47fd-8169-f30009ce6cf2",
+   "id": "128835cf-55c4-449e-805f-1a9f49f6ec41",
    "metadata": {},
    "source": [
-    "## Conclusion\n",
+    "## 🧠 Conclusion\n",
     "\n",
-    "Ce rapport m’a permis d’explorer :\n",
-    "- Le polymorphisme avec des objets variés\n",
-    "- Les calculs de moyennes selon deux approches\n",
-    "- La puissance des ensembles et des compréhensions en Python\n",
+    "Ce rapport montre comment :\n",
+    "- Une même fonction (`f`) peut traiter plusieurs types de données.\n",
+    "- Des fonctions mathématiques (`algebrique`, `geometrique`) peuvent être réutilisées.\n",
+    "- Les **ensembles** et **comprehensions** facilitent les filtres et combinaisons de données.\n",
     "\n",
-    "Ces notions sont fondamentales pour structurer et analyser des données efficacement.\n"
+    "> 🧩 Python est un langage à typage dynamique, où les fonctions peuvent être générales,\n",
+    "> et les structures (listes, tuples, sets, dictionnaires) très expressives."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f2e501f-7737-4922-bd05-e12bd7591b4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
