mise ajour mon RAPPORT.ipynb

--- a/7.Algorithmes/300151558/RAPPORT.ipynb
+++ b/7.Algorithmes/300151558/RAPPORT.ipynb
@@ -5,6 +5,21 @@
    "id": "ccf6850b-6f89-49ba-93a5-261e60d312be",
    "metadata": {},
    "source": [
+    "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
+    "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| **Nom** | *hind chili* |\n",
+    "| **🆔**  | *300151558* |\n",
+    "\n",
+    "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**.|\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad25d31f-2e7e-46fe-ba96-21133ce4ec47",
+   "metadata": {},
+   "source": [
     "## 1️⃣ Factorielle\n",
     "\n",
     "### 🔹 Formule mathématique\n",
