--- a/8.OOP/300158486/RAPPORT.ipynb
+++ b/8.OOP/300158486/RAPPORT.ipynb
@@ -7,14 +7,17 @@
    "source": [
     "# 🧮 Étude : Figures Géométriques — Aires et Visualisations\n",
     "\n",
-    "Nom : Lyes Hamed  \n",
-    "🆔 : 300158486  \n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | Lyes hamed |\n",
+    "| 🆔  | 300158486           |\n",
     "\n",
     "Ce notebook démontre l’utilisation d’une hiérarchie de classes Python :\n",
     "\n",
     "- `Figure` (classe de base)\n",
     "- `Carre`\n",
     "- `Cercle`\n",
+    "- `Losange`\n",
     "\n",
     "Puis l'affichage graphique grâce à :\n",
     "\n",
@@ -22,9 +25,9 @@
     "- **numpy 2.1.3**\n",
     "\n",
     "Nous allons :\n",
-    "1. importer les classes définies dans les fichiers (.py)\n",
-    "2. calculer les aires\n",
-    "3. afficher graphiquement carré + cercle\n"
+    "1. définir les classes dans le notebook  \n",
+    "2. créer un carré et un cercle  \n",
+    "3. tracer les figures graphiquement  "
    ]
   },
   {
@@ -148,14 +151,6 @@
     "afficher_cercle(c2)\n",
     "afficher_losange(l1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "405242bc-ee49-4e24-8fd9-a956cfdf8932",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
