--- a/8.OOP/300155281/RAPPORT.ipynb
+++ b/8.OOP/300155281/RAPPORT.ipynb
@@ -1,6 +1,52 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "209e967a-8188-4321-b408-22707aedca54",
+   "metadata": {},
+   "source": [
+    "# 🧮 Étude : Figures Géométriques — Aires et Visualisations\n",
+    "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | ERNICE KENNA  |\n",
+    "| 🆔  | 300155281         |\n",
+    "\n",
+    "Ce notebook démontre l’utilisation d’une hiérarchie de classes Python :\n",
+    "\n",
+    "- `Figure` (classe de base)\n",
+    "- `Carre`\n",
+    "- `Cercle`\n",
+    "\n",
+    "Puis l'affichage graphique grâce à :\n",
+    "\n",
+    "- **matplotlib 3.9.2**\n",
+    "- **numpy 2.1.3**\n",
+    "\n",
+    "Nous allons :\n",
+    "1. définir les classes dans le notebook  \n",
+    "2. créer un carré et un cercle  \n",
+    "3. tracer les figures graphiquement  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c278eec-6348-410d-9588-2723dbfc0eb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "",
+   "name": ""
+  },
+  "language_info": {
+   "name": ""
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
