--- a/8.OOP/300150410/RAPPORT.ipynb
+++ b/8.OOP/300150410/RAPPORT.ipynb
@@ -160,7 +160,7 @@
     "\"\"\"\n",
     "Fichier : visualisation_3d.py\n",
     "Description : Visualisation 3D créative d'un carré (prisme) et d'un cercle (cylindre)\n",
-    "Auteur : [ton ID]\n",
+    "Auteur : [300150410]\n",
     "Date : 2025-11-26\n",
     "\"\"\"\n",
     "\n",
