echec de la mise a jour

--- a/8.OOP/300155281/RAPPORT.ipynb
+++ b/8.OOP/300155281/RAPPORT.ipynb
@@ -35,16 +35,120 @@
    "id": "5c278eec-6348-410d-9588-2723dbfc0eb4",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from carre import Carre, afficher_carre\n",
+    "from cercle import Cercle, afficher_cercle\n",
+    "\n",
+    "\n",
+    "c1 = Carre(4)\n",
+    "c2 = Cercle(3)\n",
+    "c3 = Trapeze(20,10,22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d94b3f90-00e8-4603-bbd5-0f8b323449f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f6d5638-b6b6-4b90-92d3-fc86b6fed1b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def afficher_carre(carre):\n",
+    "    cote = carre.cote\n",
+    "    x = [0, cote, cote, 0, 0]\n",
+    "    y = [0, 0, cote, cote, 0]\n",
+    "\n",
+    "    plt.figure(figsize=(5, 5))\n",
+    "    plt.plot(x, y)\n",
+    "    plt.fill(x, y, alpha=0.3)\n",
+    "    plt.title(f\"Carré — côté={cote}, aire={carre.aire()}\")\n",
+    "    plt.axis(\"equal\")\n",
+    "    plt.grid(True)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ca6fa99-db64-4f0a-a864-048a5e287b6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def afficher_cercle(cercle):\n",
+    "    r = cercle.rayon\n",
+    "    theta = np.linspace(0, 2*np.pi, 300)\n",
+    "\n",
+    "    x = r * np.cos(theta)\n",
+    "    y = r * np.sin(theta)\n",
+    "\n",
+    "    plt.figure(figsize=(5, 5))\n",
+    "    plt.plot(x, y)\n",
+    "    plt.fill(x, y, alpha=0.3)\n",
+    "    plt.title(f\"Cercle — rayon={r}, aire={cercle.aire():.2f}\")\n",
+    "    plt.axis(\"equal\")\n",
+    "    plt.grid(True)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b889f759-2a94-4bdd-85b6-bdd98e181506",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'afficher_cercle' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mafficher_cercle\u001b[49m(c2)\n",
+      "\u001b[31mNameError\u001b[39m: name 'afficher_cercle' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "afficher_carre(c1)\n",
+    "afficher_cercle(c2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ace46f45-96b1-4e7d-a902-27ceae8fc4f7",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
